--- a/commands/Add-VPASApplication.html
+++ b/commands/Add-VPASApplication.html
@@ -145,6 +145,8 @@
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Update-VPASAccountFields.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Update-VPASAccountFields</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllAccounts.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllAccounts</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAccountDetails.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAccountDetails</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAccountDetailsExtended.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAccountDetailsExtended</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAccountCompliance.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAccountCompliance</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAccountActivity.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAccountActivity</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASPasswordHistory.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASPasswordHistory</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASPasswordValue.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASPasswordValue</a></li>
@@ -188,6 +190,7 @@
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASSafeDetails.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASSafeDetails</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASSafesByPlatformID.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASSafesByPlatformID</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllSafes.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllSafes</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASEmptySafes.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASEmptySafes</a></li>
 							<li class="nospacelist"><a><b>Safe Members (PAM)</a></b></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Add-VPASSafeMember.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Add-VPASSafeMember</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Remove-VPASSafeMember.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Remove-VPASSafeMember</a></li>
@@ -221,6 +224,7 @@
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Enable-VPASRotationalPlatform.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Enable-VPASRotationalPlatform</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllRotationalPlatforms.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllRotationalPlatforms</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASRotationalPlatformDetails.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASRotationalPlatformDetails</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASEmptyPlatforms.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASEmptyPlatforms</a></li>
 							<li class="nospacelist"><a><b>Internal (PAM)</a></b></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Add-VPASAllowedReferrer.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Add-VPASAllowedReferrer</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllowedReferrer.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllowedReferrer</a></li>
@@ -235,6 +239,7 @@
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASDirectoryMappingDetails.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASDirectoryMappingDetails</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Add-VPASAllowedIPs.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Add-VPASAllowedIPs</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllowedIPs.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllowedIPs</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASSearchProperties.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASSearchProperties</a></li>
 							<li class="nospacelist"><a><b>PSM (PAM)</a></b></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./New-VPASPSMSession.html" style="font-size: 14px; color: #f5f5f5;">&#8226; New-VPASPSMSession</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllConnectionComponents.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllConnectionComponents</a></li>
@@ -290,6 +295,8 @@
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Invoke-VPASMetricsPlatforms.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Invoke-VPASMetricsPlatforms</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Invoke-VPASMetricsProviders.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Invoke-VPASMetricsProviders</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Invoke-VPASUserLicenseReport.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Invoke-VPASUserLicenseReport</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Invoke-VPASHealthCheck.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Invoke-VPASHealthCheck</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Find-VPASTargetValue.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Find-VPASTargetValue</a></li>
 							<li class="nospacelist"><a><b>SQL (PAM)</a></b></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Set-VPASSQLConnectionDetails.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Set-VPASSQLConnectionDetails</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Test-VPASSQLConnectionDetails.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Test-VPASSQLConnectionDetails</a></li>
@@ -297,6 +304,14 @@
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASSQLPlatforms.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASSQLPlatforms</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASSQLSafes.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASSQLSafes</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Invoke-VPASQuery.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Invoke-VPASQuery</a></li>
+							<li class="nospacelist"><a><b>Color Themes (PAM)</a></b></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllCustomThemes.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllCustomThemes</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASCustomTheme.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASCustomTheme</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Enable-VPASCustomTheme.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Enable-VPASCustomTheme</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Disable-VPASCustomTheme.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Disable-VPASCustomTheme</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASCurrentCustomTheme.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASCurrentCustomTheme</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Remove-VPASCustomTheme.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Remove-VPASCustomTheme</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Update-VPASCustomThemeDraft.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Update-VPASCustomThemeDraft</a></li>
 							<li class="nospacelist"><a><b>Roles (Identity)</a></b></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Add-VPASIdentityRole.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Add-VPASIdentityRole</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Remove-VPASIdentityRole.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Remove-VPASIdentityRole</a></li>
@@ -424,7 +439,8 @@
 											<br>
 											<h1 style="text-align: left;">Syntax:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>Add-VPASApplication -AppID &lt;String&gt; [-Description &lt;String&gt;] [-Location &lt;String&gt;] [-AccessPermittedFrom &lt;String&gt;] [-AccessPermittedTo &lt;String&gt;] [-ExpirationDate &lt;String&gt;] [-Disabled] [-BusinessOwnerFName &lt;String&gt;] [-BusinessOwnerLName &lt;String&gt;] [-BusinessOwnerEmail &lt;String&gt;] [-BusinessOwnerPhone &lt;String&gt;] [-token &lt;Hashtable&gt;] [&lt;CommonParameters&gt;]</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>Add-VPASApplication -AppID &lt;String&gt; [-Description &lt;String&gt;] [-Location &lt;String&gt;] [-AccessPermittedFrom &lt;String&gt;] [-AccessPermittedTo &lt;String&gt;] [-ExpirationDate &lt;String&gt;] [-Disabled] [-BusinessOwnerFName &lt;String&gt;] [-BusinessOwnerLName &lt;String&gt;] </b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>[-BusinessOwnerEmail &lt;String&gt;] [-BusinessOwnerPhone &lt;String&gt;] [-token &lt;Hashtable&gt;] [&lt;CommonParameters&gt;]</b></p></td></tr>
 												<tr><td><p style="text-align: left; font-size: 14px;"><b>Add-VPASApplication -InputParameters &lt;Hashtable&gt; [-token &lt;Hashtable&gt;] [&lt;CommonParameters&gt;]</b></p></td></tr>
 											</table>
 											</div>
