--- a/commands/Get-VPASAccountRequestDetails.html
+++ b/commands/Get-VPASAccountRequestDetails.html
@@ -163,6 +163,18 @@
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Set-VPASLinkedAccount.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Set-VPASLinkedAccount</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Remove-VPASLinkedAccount.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Remove-VPASLinkedAccount</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAccountPrivateSSHKey.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAccountPrivateSSHKey</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllDependentAccounts.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllDependentAccounts</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASDependentAccounts.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASDependentAccounts</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASDependentAccountDetails.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASDependentAccountDetails</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Add-VPASDependentAccount.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Add-VPASDependentAccount</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Remove-VPASDependentAccount.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Remove-VPASDependentAccount</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Resume-VPASDependentAccount.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Resume-VPASDependentAccount</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Update-VPASDependentAccount.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Update-VPASDependentAccount</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Push-VPASDependentAccountSecret.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Push-VPASDependentAccountSecret</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Add-VPASOnboardingRule.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Add-VPASOnboardingRule</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllOnboardingRules.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllOnboardingRules</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASOnboardingRules.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASOnboardingRules</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Remove-VPASOnboardingRule.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Remove-VPASOnboardingRule</a></li>
 							<li class="nospacelist"><a><b>Account Requests (PAM)</a></b></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Add-VPASAccountRequest.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Add-VPASAccountRequest</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Remove-VPASAccountRequest.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Remove-VPASAccountRequest</a></li>
@@ -225,6 +237,13 @@
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllRotationalPlatforms.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllRotationalPlatforms</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASRotationalPlatformDetails.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASRotationalPlatformDetails</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASEmptyPlatforms.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASEmptyPlatforms</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASStoredPlatformDetails.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASStoredPlatformDetails</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Remove-VPASStoredPlatform.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Remove-VPASStoredPlatform</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Set-VPASStoredPlatform.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Set-VPASStoredPlatform</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Import-VPASStoredPlatform.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Import-VPASStoredPlatform</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASMasterPolicySettings.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASMasterPolicySettings</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllMasterPolicySettings.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllMasterPolicySettings</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Update-VPASMasterPolicySettings.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Update-VPASMasterPolicySettings</a></li>
 							<li class="nospacelist"><a><b>Internal (PAM)</a></b></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Add-VPASAllowedReferrer.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Add-VPASAllowedReferrer</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllowedReferrer.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllowedReferrer</a></li>
@@ -240,6 +259,8 @@
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Add-VPASAllowedIPs.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Add-VPASAllowedIPs</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllowedIPs.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllowedIPs</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASSearchProperties.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASSearchProperties</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllReports.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllReports</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllTasks.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllTasks</a></li>
 							<li class="nospacelist"><a><b>PSM (PAM)</a></b></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./New-VPASPSMSession.html" style="font-size: 14px; color: #f5f5f5;">&#8226; New-VPASPSMSession</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASAllConnectionComponents.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASAllConnectionComponents</a></li>
@@ -337,6 +358,13 @@
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Test-VPASIdentityUserLocked.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Test-VPASIdentityUserLocked</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./New-VPASIdentityGenerateUserPassword.html" style="font-size: 14px; color: #f5f5f5;">&#8226; New-VPASIdentityGenerateUserPassword</a></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Update-VPASIdentityCurrentUserPassword.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Update-VPASIdentityCurrentUserPassword</a></li>
+							<li class="nospacelist"><a><b>Web Apps (Identity)</a></b></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASIdentityAllApplicationTemplates.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASIdentityAllApplicationTemplates</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASIdentityApplicationTemplates.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASIdentityApplicationTemplates</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASIdentityApplicationDetails.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASIdentityApplicationDetails</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASIdentityAllApplications.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASIdentityAllApplications</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASIdentityApplications.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASIdentityApplications</a></li>
+							<li style="background-color: #333645;" class="nospacelist"><a href="./Test-VPASIdentityApplicationCatalog.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Test-VPASIdentityApplicationCatalog</a></li>
 							<li class="nospacelist"><a><b>Internal (Identity)</a></b></li>
 							<li style="background-color: #333645;" class="nospacelist"><a href="./Get-VPASIdentityTenantDetails.html" style="font-size: 14px; color: #f5f5f5;">&#8226; Get-VPASIdentityTenantDetails</a></li>
 							<li class="nospacelist"><a><b>Policies (DPA)</a></b></li>
@@ -439,7 +467,8 @@
 											<br>
 											<h1 style="text-align: left;">Syntax:</h1>
 											<table style="background: #2e3141">
-												<tr><td><p style="text-align: left; font-size: 14px;"><b>Get-VPASAccountRequestDetails [-RequestedSafe &lt;String&gt;] [-RequestedPlatform &lt;String&gt;] [-RequestedUsername &lt;String&gt;] [-RequestedAddress &lt;String&gt;] [-RequestedReason &lt;String&gt;] [-ExportToCSV] [-CSVDirectory &lt;String&gt;] [-token &lt;Hashtable&gt;] [&lt;CommonParameters&gt;]</b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>Get-VPASAccountRequestDetails [-RequestedSafe &lt;String&gt;] [-RequestedPlatform &lt;String&gt;] [-RequestedUsername &lt;String&gt;] [-RequestedAddress &lt;String&gt;] [-RequestedReason &lt;String&gt;] [-ExportToCSV] [-CSVDirectory &lt;String&gt;] [-token &lt;Hashtable&gt;] </b></p></td></tr>
+												<tr><td><p style="text-align: left; font-size: 14px;"><b>[&lt;CommonParameters&gt;]</b></p></td></tr>
 												<tr><td><p style="text-align: left; font-size: 14px;"><b>Get-VPASAccountRequestDetails -RequestedAcctID &lt;String&gt; [-RequestedReason &lt;String&gt;] [-ExportToCSV] [-CSVDirectory &lt;String&gt;] [-token &lt;Hashtable&gt;] [&lt;CommonParameters&gt;]</b></p></td></tr>
 												<tr><td><p style="text-align: left; font-size: 14px;"><b>Get-VPASAccountRequestDetails -requestID &lt;String&gt; [-ExportToCSV] [-CSVDirectory &lt;String&gt;] [-token &lt;Hashtable&gt;] [&lt;CommonParameters&gt;]</b></p></td></tr>
 												<tr><td><p style="text-align: left; font-size: 14px;"><b>Get-VPASAccountRequestDetails -InputParameters &lt;Hashtable&gt; [-token &lt;Hashtable&gt;] [&lt;CommonParameters&gt;]</b></p></td></tr>
