--- a/install.html
+++ b/install.html
@@ -146,7 +146,7 @@
 											<table class="content" style="background: #2e3141; width: 100%;">
 												<tr>
 													<td>
-														<p style="text-align: left;">01) Click on the Github Button<br>- ​​Or browse to: <a target="_blank" rel="noopener noreferrer" href="https://github.com/vmelamed5/CyberArk">github.com/vmelamed5/CyberArk</a></p>
+														<p style="text-align: left;">01) Click on the Github Button<br>- ​​Or browse to: <a target="_blank" rel="noopener noreferrer" href="https://github.com/vmelamed5/VpasModule">github.com/vmelamed5/VpasModule</a></p>
 														<img src="images\ManualInstall01.gif" style="width: 100%;">
 													</td>
 												</tr>
