--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<p>CyberArk is a privileged access management (PAM) solution, and VpasModule, a PowerShell module, facilitates interaction with CyberArk's features through its web services. This could involve actions such as managing and retrieving privileged credentials, accessing session information, modifying system configurations, or performing other tasks related to privileged access security using PowerShell scripts. To use this module effectively, users would need to integrate it into their PowerShell scripts and workflows for seamless interaction with CyberArk's PAM capabilities.</p>
 										
 										<ul class="actions" style="float: right;">
-											<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/vmelamed5/CyberArk" class="button icon solid" style="background-color: #2e3141;"><i class="fab fa-github fa-lg"></i>GitHub</a></li>
+											<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/vmelamed5/VpasModule" class="button icon solid" style="background-color: #2e3141;"><i class="fab fa-github fa-lg"></i>GitHub</a></li>
 											<li><a target="_blank" rel="noopener noreferrer" href="https://www.powershellgallery.com/packages/VpasModule" class="button icon solid" style="background-color: #2e3141;"><i class="fas fa-laptop-code fa-lg"></i>PowershellGallery</a></li>
 										</ul>
 
