--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 											<p style="margin: 0" >VpasModule Creator + Developer</p>
 											<p><i class="fas fa-envelope"></i>  vpasmodule@gmail.com</p>
 											<ul class="actions" style="display: inline-block;">
-												<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/vmelamed5/CyberArk" class="button icon solid" style="width: 100%; background-color: #2e3141;"><i class="fab fa-github fa-lg"></i>GitHub</a></li>
+												<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/vmelamed5/VpasModule" class="button icon solid" style="width: 100%; background-color: #2e3141;"><i class="fab fa-github fa-lg"></i>GitHub</a></li>
 												<li><a target="_blank" rel="noopener noreferrer" href="https://www.powershellgallery.com/packages/VpasModule" class="button icon solid" style="width: 100%; background-color: #2e3141;"><i class="fas fa-laptop-code fa-lg"></i>PowershellGallery</a></li>
 												<li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/vadim-melamed/" class="button icon solid" style="width: 100%; background-color: #2e3141;"><i class="fab fa-linkedin fa-lg"></i>LinkedIn</a></li>
 												<li><a target="_blank" rel="noopener noreferrer" href="https://github.com/sponsors/vmelamed5" class="button icon solid" style="width: 100%; background-color: #2e3141;"><i class="fas fa-heart fa-lg" style="color: #ff00a2;"></i> GitHub Sponsor</a></li>
