--- a/commands/Template-Page.html
+++ b/commands/Template-Page.html
@@ -464,7 +464,7 @@
 						"Get-VPASDirectoryMappingDetails": "./Get-VPASDirectoryMappingDetails.html"
 					},
 					"Internal": {
-						"Add-VPASAllowedIPs": "./Add-VPASAllowedIPs.html",
+						"Add-VPASAllowedIP": "./Add-VPASAllowedIP.html",
 						"Get-VPASAllowedIPs": "./Get-VPASAllowedIPs.html",
 						"Add-VPASAllowedReferrer": "./Add-VPASAllowedReferrer.html",
 						"Get-VPASAllowedReferrer": "./Get-VPASAllowedReferrer.html",
