--- a/commands/Test-VPASIdentityApplicationCatalog.html
+++ b/commands/Test-VPASIdentityApplicationCatalog.html
@@ -476,7 +476,7 @@ $false if failed</b></p></td></tr>
 						"Get-VPASDirectoryMappingDetails": "./Get-VPASDirectoryMappingDetails.html"
 					},
 					"Internal": {
-						"Add-VPASAllowedIPs": "./Add-VPASAllowedIPs.html",
+						"Add-VPASAllowedIP": "./Add-VPASAllowedIP.html",
 						"Get-VPASAllowedIPs": "./Get-VPASAllowedIPs.html",
 						"Add-VPASAllowedReferrer": "./Add-VPASAllowedReferrer.html",
 						"Get-VPASAllowedReferrer": "./Get-VPASAllowedReferrer.html",
