--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
 											<a href="./about.html" class="special">Go to About</a>
 										</article>
 										<article>
+											<a href="./ScriptBuilder.html" class="image"><img src="images/ScriptBuilder.gif" alt="" /></a>
+											<h3 class="major">SCRIPT BUILDER</h3>
+											<p>Generate and copy a script with values provided by you</p>
+											<a href="./ScriptBuilder.html" class="special">Try out Script Builder</a>
+										</article>
+										<article>
 											<a href="https://docs.cyberark.com/Portal/Content/Resources/_TopNav/cc_Portal.htm" class="image"><img src="images/pic09.gif" alt="" /></a>
 											<h3 class="major">OFFICIAL DOCUMENTATION</h3>
 											<p>Official CyberArk documentation (browse to the correct version if applicable)</p>
