--- a/scriptbuilder/Template-Page.html
+++ b/scriptbuilder/Template-Page.html
@@ -370,7 +370,7 @@
 																					<form>
 																						<div style="display: flex; margin-bottom: 5px;">
 																							<label style="align-items: center; margin-top: 10px; margin-right: 5px;" for="divISPSSAuthPVWA">PVWA:</label>
-																							<input style="font-size: 12px; background-color: #4C5C96;" type="text" id="divISPSSAuthPVWA" name="divISPSSAuthPVWA" placeholder="MyPVWA.vman.com">
+																							<input style="font-size: 12px; background-color: #4C5C96;" type="text" id="divISPSSAuthPVWA" name="divISPSSAuthPVWA" placeholder="SubDomain.privilegecloud.cyberark.cloud">
 																						</div>
 																						<div style="display: flex; margin-bottom: 5px;">
 																							<label style="align-items: center; margin-top: 10px; margin-right: 5px;" for="divISPSSAuthIdentity">IdentityURL:</label>
